My mental condition is worsening rapidly lol